# depin

./: .gitignore  AGENTS.md  README.md
rust/: Cargo.toml  build-deploy-depin-test.sh
rust/lib/instructions/checker/: Cargo.toml
rust/lib/instructions/checker/src/: activate.rs  input.rs  lib.rs  payout.rs
rust/lib/instructions/escrow_deposit/: Cargo.toml
rust/lib/instructions/escrow_deposit/src/: lib.rs
rust/lib/instructions/escrow_withdraw/: Cargo.toml
rust/lib/instructions/escrow_withdraw/src/: lib.rs
rust/lib/instructions/global/: Cargo.toml
rust/lib/instructions/global/src/: activate_checker_licenses.rs  input.rs  lib.rs
rust/lib/instructions/infra_offer/: Cargo.toml
rust/lib/instructions/infra_offer/src/: close.rs  lib.rs  register.rs  state.rs
rust/lib/instructions/init/: Cargo.toml
rust/lib/instructions/init/src/: input.rs  lib.rs  proc_init.rs
rust/lib/instructions/licensing/: Cargo.toml
rust/lib/instructions/licensing/src/: delegate.rs  input.rs  lib.rs  state.rs
rust/lib/instructions/treasury/: Cargo.toml
rust/lib/instructions/treasury/src/: input.rs  lib.rs  unlock.rs
rust/lib/instructions/worker/: Cargo.toml
rust/lib/instructions/worker/src/: activate.rs  input.rs  lib.rs  submit.rs  update_worker_uri.rs
rust/lib/shared/: Cargo.toml
rust/lib/shared/src/: lib.rs
rust/lib/shared/src/constants/: accounts.rs  programs.rs  seeds.rs
rust/lib/shared/src/types/: account.rs  ring_buffer.rs
rust/lib/shared/src/utils/: account.rs  (+3 more)
rust/programs/depin/: Cargo.toml
rust/programs/depin/src/: instruction.rs  lib.rs  processor.rs
(+67 files in other folders)
