[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))'
]

[package]
name = "depin"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.2.1"
escrow_deposit = { path = "../../lib/instructions/escrow_deposit" }
escrow_withdraw = { path = "../../lib/instructions/escrow_withdraw" }
worker = { path = "../../lib/instructions/worker" }
checker = { path = "../../lib/instructions/checker" }
global = { path = "../../lib/instructions/global" }
init = { path = "../../lib/instructions/init" }
treasury = { path = "../../lib/instructions/treasury" }
borsh = "1.5"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test = ["escrow_deposit/test", "escrow_withdraw/test", "global/test"]
